--- a/dac_styles.css
+++ b/dac_styles.css
@@ -1,6 +1,3 @@
-html {
-  width: 100%; }
-
 /* Bootstrap 4 Reboot */
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 html {
@@ -378,5 +375,49 @@ output {
   display: none !important; }
 
 /*# sourceMappingURL=bootstrap-reboot.css.map */
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var,
+b, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  vertical-align: baseline;
+  background: transparent; }
+
+.dac_grid {
+  background-color: #eee;
+  min-height: 100%;
+  min-width: 100%;
+  width: 100vw;
+  height: 100vh; }
+
+.dac_container-full {
+  background-color: #334D5C;
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px; }
+
+.dac_container-content {
+  background-color: #DF5A49;
+  color: #fff;
+  text-align: center;
+  max-width: 1440px;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto; }
 
 /*# sourceMappingURL=dac_styles.css.map */
