--- a/scss/dac_styles-grid.scss
+++ b/scss/dac_styles-grid.scss
@@ -1,3 +1,54 @@
-html {
-  width: 100%;
+
+// Colors
+// from https://color.adobe.com/Flat-design-colors-1-color-theme-3044245/
+$blue: #334D5C;
+$teal: #45B29D;
+$yellow: #EFC94C;
+$orange: #E27A3F;
+$red: #DF5A49;
+$gray-light: #eee;
+$white: #fff;
+
+$padding-base: 15px;
+
+
+// initializer style at top level (body or wrapper div)
+.dac_grid {
+  // Demo styles
+  background-color: $gray-light;
+
+  // Framework styles
+  min-height: 100%;
+  min-width: 100%;
+  width: 100vw;
+  height: 100vh;
 }
+
+.dac_container-full {
+  // Demo styles
+  background-color: $blue;
+  color: $white;
+  text-align: center;
+  
+  // Framework styles
+  width: 100%;
+  min-height: 1px;
+  padding-left: $padding-base;
+  padding-right: $padding-base;
+}
+
+.dac_container-content {
+  // Demo styles
+  background-color: $red;
+  color: $white;
+  text-align: center;
+
+  // Framework styles
+  max-width: 1440px;
+  min-height: 1px;
+  padding-left: $padding-base;
+  padding-right: $padding-base;
+  margin-left: auto;
+  margin-right: auto;
+}
+
