--- a/scss/dac_styles-grid.scss
+++ b/scss/dac_styles-grid.scss
@@ -1,54 +1,54 @@
+// *** Grid Styles ***
 
-// Colors
-// from https://color.adobe.com/Flat-design-colors-1-color-theme-3044245/
-$blue: #334D5C;
-$teal: #45B29D;
-$yellow: #EFC94C;
-$orange: #E27A3F;
-$red: #DF5A49;
-$gray-light: #eee;
-$white: #fff;
-
-$padding-base: 15px;
-
-
+// * Containers *
 // initializer style at top level (body or wrapper div)
 .dac_grid {
-  // Demo styles
-  background-color: $gray-light;
-
-  // Framework styles
   min-height: 100%;
   min-width: 100%;
   width: 100vw;
   height: 100vh;
+  position: absolute;
 }
 
+// Main Container Option 1:
+// full-width (of parent) container
 .dac_container-full {
-  // Demo styles
-  background-color: $blue;
-  color: $white;
-  text-align: center;
-  
-  // Framework styles
   width: 100%;
   min-height: 1px;
-  padding-left: $padding-base;
-  padding-right: $padding-base;
+  position: relative;
 }
-
+// Main Container Option 2:
+// centered content-width container
 .dac_container-content {
-  // Demo styles
-  background-color: $red;
-  color: $white;
-  text-align: center;
-
-  // Framework styles
   max-width: 1440px;
   min-height: 1px;
-  padding-left: $padding-base;
-  padding-right: $padding-base;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
+  
+  @include clearfix;
 }
 
+// nested immediately under dac_container-content 
+.dac_container-content-padded {
+  width: 100%;
+  padding-left: $spacer-base;
+  padding-right: $spacer-base;
+}
+
+// Sidebar
+.dac_sidebar-right {
+  @include sidebar;
+  position: right;
+  margin-left: 200px;
+}
+
+.dac_sidebar-left {
+  @include sidebar;
+  float: left;
+}
+
+@include column-classes;
+
+
+// ****************** //
